--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,23 +1,19 @@
 <!--STYLES-->
+<link rel="stylesheet" href="/styles/animate-fade-out.css">
 <link rel="stylesheet" href="/styles/de.css">
 <!--STYLES END-->
 
-<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
-    style="width:30%">
-<div class="container p-3 my-3 border de-colors">
-  <h1>Davis &amp; Elkins College</h1>
-  <h2>Naylor Learning Center</h2>
+<div class="container-fluid rounded py-3 de-colors">
+    <h1>Davis &amp; Elkins College</h1>
+    <h2>Naylor Learning Center</h2>
 </div>
-        </div>   <form method="POST" action="<%= baseUrl %>/login">
-        <div class="w3-margin">
-        <div>
-            <input type="text" class="form-control-lg" placeholder="Username" autofocus name="username" required />
-        </div>
-        <div>
-            <input type="password" class="form-control-lg" placeholder="Password" name="password" required/>
-        </div>
-        <button type="submit" class="btn btn-outline-dark">Submit</button>
-    </form>
-</div>
-    </form>
-</div>
+
+<form class="py-3" method="POST" action="<%= baseUrl %>/login">
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Username" autofocus name="username" required />
+    </div>
+    <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password" name="password" required />
+    </div>
+    <button type="submit" class="btn btn-dark">Submit</button>
+</form>
