--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+<div class="container">
+  <h2><%= formData.firstName + " " + formData.lastName %></h2>
+    <p>Are you an SLP Instructor?</p>
+    <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Yes
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Yes</a></li>
+            <li><a href="#">No</a></li>
+         </ul>
+    </div>
+</div>
+
+
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:25%">
     <form method="POST" action="<%= baseUrl + action %>">
 
