--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,6 +1,6 @@
 <!--STYLES-->
-<link rel="stylesheet" href="/styles/animate-fade-out.css" />
-<link rel="stylesheet" href="/styles/de.css" />
+<link rel="stylesheet" href="/styles/animate-fade-out.css">
+<link rel="stylesheet" href="/styles/de.css">
 <!--STYLES END-->
 
 <div class="container p-3 my-3 border de-colors">
