--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -40,7 +40,7 @@
         <div class="form-group">
             <label for="majorTwo">Major 2:</label>
             <select class="form-control" id="majorTwo" name="majorTwo">
-                <%- generateOptions("majorTwo", name"); %>
+                <%- generateOptions("majorTwo", "name"); %>
             </select>
         </div>
     </div>
