Bootstrap for visits list; closes #101

--- a/views/404.html
+++ b/views/404.html
@@ -19,6 +19,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/animate-fade-out.css">
     <link rel="stylesheet" href="/styles/de.css">
+    <link rel="stylesheet" href="/styles/sticky-table.css">
     <!--STYLES END-->
 </head>
 
