--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -48,6 +48,7 @@
 	<!--STYLES-->
 	<link rel="stylesheet" href="/styles/animate-fade-out.css">
 	<link rel="stylesheet" href="/styles/de.css">
+	<link rel="stylesheet" href="/styles/sticky-table.css">
 	<!--STYLES END-->
 
 </head>
