--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -1,16 +1,18 @@
+<h1><%= formData.firstName + " " + formData.lastName %></h1>
 <form method="POST" action="<%= baseUrl + action %>">
-    <div class="container">
-        <h2><%= formData.firstName + " " + formData.lastName %></h2>
-        <p>Are you an SLP Instructor?</p>
-            <select id="isSlpInstructor" name="isSlpInstructor">
-                <% if (formData.isSlpInstructor) { %>
-                <option value="true" selected>Yes</option>
-                <option value="false">No</option>
-                <% } else { %>
-                <option value="true">Yes</option>
-                <option value="false" selected>No</option>
-                <% } %>
-            </select>
-    </div>
-    <button id="submitButton" type="submit" class="btn btn-dark" onclick="return validateForm()">Submit</button>
+    <div class="form-group">
+        <label for="isSlpInstuctor">Are you an SLP Instructor?</label>
+            <div class="form-contol">
+                <select id="isSlpInstructor" name="isSlpInstructor">
+                    <% if (formData.isSlpInstructor) { %>
+                    <option value="true" selected>Yes</option>
+                    <option value="false">No</option>
+                    <% } else { %>
+                    <option value="true">Yes</option>
+                    <option value="false" selected>No</option>
+                    <% } %>
+                </select>
+            </div>
+        </div>
+    <button id="submitButton" type="submit" class="btn btn-dark" >Submit</button>
 </form>
