Finalized student profile changes and finished check in

--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="form-group">
             <label for="academicRank">Academic Rank:</label>
-            <select class="form-control" id="academicRank" name="academicRank">
+            <select class="form-control" id="academicRank" name="academicRank" autofocus>
                 <%- generateOptions("academicRank"); %>
             </select>
         </div>
