--- a/views/pages/sport/createForm.html
+++ b/views/pages/sport/createForm.html
@@ -1,13 +1,8 @@
-<form class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="width:25%" method="POST" action="<%= baseUrl + action %>">
-
-    <h2>Add A Sport</h2>
-
-    <div class="w3-input w3-border-0">
+<h1>Add A Sport</h1>
+<form method="POST" action="<%= baseUrl + action %>">
+    <div class="form-group">
         <label for="name" value="name">Sport's Name</label>
-        <input id="name" name="name" type="text" autofocus maxlength="255" required value="<%= formData.name %>">
+        <input type="text" class="form-control" id="name">
     </div>
-
-    <div class="w3-input">
-        <button class="w3-btn w3-white w3-margin" id="submitButton" type="submit">Submit</button>
-    </div>
+    <button id="submitButton" type="submit" class="btn btn-dark" >Submit</button>
 </form>
