--- a/views/pages/major/createForm.html
+++ b/views/pages/major/createForm.html
@@ -1,13 +1,7 @@
-<form class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="width:25%" method="POST" action="<%= baseUrl + action %>">
-    <div>
-        <h2>Add A Major</h2>
-    </div>
-    <div class="w3-input w3-border-0">
-        <label for="name" value="name">Major's Name</label>
-        <input id="name" name="name" type="text" autofocus maxlength="255" required value="<%= formData.name %>">
-    </div>
-
-    <div class="w3-input">
-        <button id="submitButton" type="submit">Submit</button>
-    </div>
-</form>
+<div>
+    <h1>Add A Major</h1>
+</div>
+<div class="form-group">
+    <input type="text" class="form-control" placeholder="Major's Name" autofocus name="name" required />
+</div>
+<button type="submit" class="btn btn-dark">Submit</button>
