button working now finalizing index page formatting but working #104

--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -1,7 +1,6 @@
-<a href="<%= baseUrl %>/major/new" class="w3-button" style="color: white; position: fixed; right: 0; z-index: 10;">Add a new
+<a href="<%= baseUrl %>/major/new" class="btn btn-dark float-right mt-2" role="button">Add a new
     Major</a>
 
-<div style="width: 70%; padding-left: 30%; padding-bottom: 1%; padding-top: 4%;">
     <table class="w3-table-all w3-card" id="majorTable">
         <thead>
             <tr>
