--- a/views/pages/major/createForm.html
+++ b/views/pages/major/createForm.html
@@ -1,3 +1,4 @@
+<form method="POST" action="<%= baseUrl + action %>">
 <div>
     <h1>Add A Major</h1>
 </div>
@@ -5,3 +6,4 @@
     <input type="text" class="form-control" placeholder="Major's Name" autofocus name="name" required />
 </div>
 <button type="submit" class="btn btn-dark">Submit</button>
+</form>
