--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Naylor Learning Center</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="<%= baseUrl %>/DE_Logo.ico"
+        />
 
-<head>
-	<meta charset="utf-8">
+        <!-- Viewport mobile tag for sensible mobile support -->
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1"
+        />
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <%/* If you want to discourage search engines from indexing this site,
+        uncomment the following line: */%> <%/*
+        <meta name="robots" content="noindex" />
+        */%>
 
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<link rel="icon" type="image/x-icon" href="<%= baseUrl %>/DE_Logo.ico" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-	<!-- Viewport mobile tag for sensible mobile support -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-	<%/* If you want to discourage search engines from indexing this site, uncomment the following line: */%>
-	<%/* <meta name="robots" content="noindex"> */%>
-
-
-	<!--
+        <!--
         Stylesheets and Preprocessors
         ==============================
 
@@ -45,90 +40,115 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-	<!--STYLES-->
-	<link rel="stylesheet" href="/styles/animate-fade-out.css">
-	<link rel="stylesheet" href="/styles/de.css">
-	<link rel="stylesheet" href="/styles/sticky-table.css">
-	<!--STYLES END-->
+        <!--STYLES-->
+        <link rel="stylesheet" href="/styles/animate-fade-out.css">
+        <link rel="stylesheet" href="/styles/de.css">
+        <link rel="stylesheet" href="/styles/sticky-table.css">
+        <!--STYLES END-->
 
-</head>
+        <!-- External, manually loaded styles -->
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+    </head>
 
-<body style="padding-top: 60px;">
-	<% try { %>
-	<% if (typeof session.role !== "undefined") { %>
-	<nav class="navbar fixed-top navbar-expand-md navbar-dark de-colors">
-		<a href="#" class="navbar-brand">D&amp;E Naylor Learning Center</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-		<div class="collapse navbar-collapse" id="collapsibleNavbar">
-			<ul class="navbar-nav">
+    <body style="padding-top: 60px">
+        <% try { %> <% if (typeof session.role !== "undefined") { %>
+        <nav class="navbar fixed-top navbar-expand-md navbar-dark de-colors">
+            <a href="#" class="navbar-brand">D&amp;E Naylor Learning Center</a>
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#collapsibleNavbar"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <% if (session.role === "staff") { %>
+                    <li class="nav-item">
+                        <a href="<%= baseUrl %>/visit" class="nav-link"
+                            >Visits</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="<%= baseUrl %>/major" class="nav-link"
+                            >Majors</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="<%= baseUrl %>/sport" class="nav-link"
+                            >Sports</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            href="<%= baseUrl %>/browser/register"
+                            class="nav-link"
+                            >Browser Registration</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            href="<%= baseUrl %>/staff/<%= session.userId %>/edit"
+                            class="nav-link"
+                            >Profile</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="<%= baseUrl %>/logout" class="nav-link"
+                            >Log out</a
+                        >
+                    </li>
+                    <% } %> <% if (session.role === "student") { %>
+                    <li class="nav-item">
+                        <a
+                            href="<%= baseUrl %>/student/<%= session.userId %>/edit"
+                            class="nav-link"
+                            >Profile</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="<%= baseUrl %>/logout" class="nav-link"
+                            >Log out</a
+                        >
+                    </li>
 
-				<% if (session.role === "staff") { %>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/visit" class="nav-link">Visits</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/major" class="nav-link">Majors</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/sport" class="nav-link">Sports</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/browser/register" class="nav-link">Browser
-						Registration</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/staff/<%= session.userId %>/edit" class="nav-link">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/logout" class="nav-link">Log out</a>
-				</li>
-				<% } %>
+                    <%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%> <%-
+                    include("../include/logoutTimer.html"); -%> <% } %>
+                </ul>
+            </div>
+        </nav>
+        <% } %> <% if (typeof session.banner !== "undefined") { %>
+        <div
+            class="alert alert-dismissible <%= typeof session.bannerClass === 'undefined' ? 'alert-success' : session.bannerClass %> <%= typeof session.role === 'undefined' ? 'animate-fade-out' : '' %>"
+            style="margin-top: -5px"
+        >
+            <button type="button" class="close" data-dismiss="alert">
+                &times;
+            </button>
+            <%= session.banner %>
+        </div>
+        <% session.banner = undefined; %> <% } %>
 
-				<% if (session.role === "student") { %>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/student/<%= session.userId %>/edit" class="nav-link">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a href="<%= baseUrl %>/logout" class="nav-link">Log out</a>
-				</li>
+        <div class="container-fluid"><%- body %></div>
 
-				<%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%>
-				<%- include("../include/logoutTimer.html"); -%>
-				<% } %>
-
-			</ul>
-	</nav>
-	<% } %>
-
-	<% if (typeof session.banner !== "undefined") { %>
-	<div class="alert alert-dismissible
-        <%= typeof session.bannerClass === 'undefined' ? 'alert-success' : session.bannerClass %>
-        <%= typeof session.role === 'undefined' ? 'animate-fade-out' : '' %>"
-		style="margin-top: -5px;">
-
-		<button type="button" class="close" data-dismiss="alert">&times;</button>
-		<%= session.banner %>
-	</div>
-	<%  session.banner = undefined; %>
-	<% } %>
-
-	<div class="container-fluid">
-		<%- body %>
-	</div>
-
-	<!-- Client-side Templates
+        <!-- Client-side Templates
         ========================
         HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served.
     -->
 
-	<!--TEMPLATES-->
-	
-	<!--TEMPLATES END-->
+        <!--TEMPLATES-->
+        
+        <!--TEMPLATES END-->
 
-
-	<!--
+        <!--
         Server-side View Locals
         ========================
 
@@ -143,8 +163,7 @@
 
     -->
 
-
-	<!--
+        <!--
 
       Client-side Javascript
       ========================
@@ -167,18 +186,19 @@
 
     -->
 
-	<!--SCRIPTS-->
-	<script src="/js/logoutTimer.js"></script>
-	<script src="/js/preventMultiSubmit.js"></script>
-	<!--SCRIPTS END-->
+        <!--SCRIPTS-->
+        <script src="/js/logoutTimer.js"></script>
+        <script src="/js/preventMultiSubmit.js"></script>
+        <!--SCRIPTS END-->
 
-	<% if (typeof session.role !== "undefined" && session.role === "student") { %>
-	<script>
-		setLogoutTimer();
-	</script>
-	<% } %>
-	<% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
+        <!-- External, manually loaded scripts -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-</body>
-
+        <% if (typeof session.role !== "undefined" && session.role === "student") { %>
+        <script>
+            setLogoutTimer();
+        </script>
+        <% } %> <% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
+    </body>
 </html>
