--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -1,35 +1,54 @@
-<a href="<%= baseUrl %>/major/new" class="btn btn-dark float-right mt-2" role="button">Add a new
-    Major</a>
+<a
+    href="<%= baseUrl %>/major/new"
+    class="btn btn-dark float-right mt-2"
+    role="button"
+    >Add a new Major</a
+>
 
-    <table class="w3-table-all w3-card" id="majorTable">
-        <thead>
-            <tr>
-                <th class="w3-left w3-margin-left">Major</th>
-                <th class="w3-center">Discontinued</th>
-            </tr>
-        </thead>
+<table class="w3-table-all w3-card" id="majorTable">
+    <thead>
+        <tr>
+            <th class="w3-left w3-margin-left">Major</th>
+            <th class="w3-center">Discontinued</th>
+        </tr>
+    </thead>
 
-        <tbody>
-            <% let count = 0 %>
-            <% if(records) {records.forEach(function(major) { count++ %>
-            <tr>
-                <td class="w3-left w3-margin-left">
-                    <%= major.name %>
-                </td>
-                <td>
-                    <form class="w3-center" method="POST" action="<%= baseUrl %>/major/<%= major.id %>">
-                        <% if(major.discontinued === "Yes") { %>
-                        <input type="hidden" name="discontinued" value="No" />
-                        <button style="border: none; background-color: white;" type="submit" id="Yes<%= count %>"><i class="fa fa-check-square-o" style="font-size: 150%;"></i></button>
-                        <% } else { %>
-                        <input type="hidden" name="discontinued" value="Yes" />
-                        <button style="border: none; background-color: white;" type="submit" id="No<%= count %>">
-                            <i class="fa fa-square-o" style="font-size: 150%;"></i></button>
-                        <% } %>
-                    </form>
-                </td>
-            </tr>
-            <% }); }%>
-        </tbody>
-    </table>
-</div>
+    <tbody>
+        <% let count = 0 %> <% if(records) {records.forEach(function(major) {
+        count++ %>
+        <tr>
+            <td class="w3-left w3-margin-left"><%= major.name %></td>
+            <td>
+                <form
+                    class="w3-center"
+                    method="POST"
+                    action="<%= baseUrl %>/major/<%= major.id %>"
+                >
+                    <% if(major.discontinued === "Yes") { %>
+                    <input type="hidden" name="discontinued" value="No" />
+                    <button
+                        style="border: none; background-color: white"
+                        type="submit"
+                        id="Yes<%= count %>"
+                    >
+                        <i
+                            class="fa fa-check-square-o"
+                            style="font-size: 150%"
+                        ></i>
+                    </button>
+                    <% } else { %>
+                    <input type="hidden" name="discontinued" value="Yes" />
+                    <button
+                        style="border: none; background-color: white"
+                        type="submit"
+                        id="No<%= count %>"
+                    >
+                        <i class="fa fa-square-o" style="font-size: 150%"></i>
+                    </button>
+                    <% } %>
+                </form>
+            </td>
+        </tr>
+        <% }); }%>
+    </tbody>
+</table>
